Release 136 (2022-09-02)
------------------------
Add nl.basjes/yauaa_context/jsonschema/1-0-4 (#1216)
Add com.snowplowanalytics.mobile/remote_config/jsonschema/1-0-1 (#1225)
Extend copyright to 2022 (#1218)
Update links in Readme (#1219)
Add CONTRIBUTING.md (#1220)

Release 135 (2022-05-30)
------------------------
Add com.snowplowanalytics.snowplow/client_session/jsonschema/1-0-2 (#1211)

Release 134 (2022-05-16)
------------------------
Add com.iterable/system_webhook/jsonschema/1-0-0 (#1204)

Release 133 (2022-03-15)
------------------------
Add com.snowplowanalytics.monitoring.batch/load_succeeded/jsonschema/3-0-0 (#1208)
Add com.snowplowanalytics.snowplow.storage/shredding_complete/jsonschema/2-0-0 (#1207)

Release 132 (2022-01-24)
------------------------
Patch com.snowplowanalytics.snowplow/mobile_context/jsonschema/1-0-2 (#1197)

Release 131 (2021-12-21)
------------------------
Add com.roku/device_info/jsonschema/1-0-0 (#1190)
Add com.roku/video/jsonschema/1-0-0 (#1189)
Add com.snowplowanalytics.monitoring.batch/load_succeeded/jsonschema/2-0-0 (#1195)

Release 130 (2021-12-01)
------------------------
Add schemas/nl.basjes/yauaa_context/jsonschema/1-0-3 (#1126)
Add com.snowplowanalytics.snowplow/identify/jsonschema/1-0-0 (#1185)
Add com.youtube/youtube/jsonschema/1-0-0 (#1180)
Add org.whatwg/video_element/jsonschema/1-0-0 (#1179)
Add org.whatwg/media_element/jsonschema/1-0-0 (#1178)
Add com.snowplowanalytics.snowplow/media_player_event/jsonschema/1-0-0 (#1177)
Add com.snowplowanalytics.snowplow/media_player/jsonschema/1-0-0 (#1176)

Release 129 (2021-11-01)
------------------------
Infrastructure: Push schema lists to Iglu Central (#1181)

Release 128 (2021-10-12)
------------------------
Add com.apple/notification_event/jsonschema/1-0-1 (#1173)
Add com.snowplowanalytics.mobile/message_notification/jsonschema/1-0-0 (#1172)
Add com.google.tag-manager.server-side/user_data/jsonschema/1-0-0 (#1171)