@@ -1,0 +1,23 @@
+{
+  "description": "Schema for a conversion event",
+  "properties": {
+    "name": {
+      "type": "string",
+      "maxLength": 255
+    },
+    "value": {
+      "type": "integer",
+      "minimum": 0,
+      "maximum": 100000
+    }
+  },
+  "additionalProperties": false,
+  "type": "object",
+  "self": {
+    "vendor": "io.snowplow.foundation",
+    "name": "conversion",
+    "format": "jsonschema",
+    "version": "1-0-0"
+  },
+  "$schema": "http://iglucentral.com/schemas/com.snowplowanalytics.self-desc/schema/jsonschema/1-0-0#"
+}
